--- a/force-app/main/default/lwc/employeePage/employeePage.html
+++ b/force-app/main/default/lwc/employeePage/employeePage.html
@@ -20,7 +20,7 @@
                                 </template>
                             </div>
                             <div class="slds-col slds-no-flex">
-                                <lightning-button label="Income"></lightning-button>
+                                <lightning-button label="Income" onclick={openmodalBalance}></lightning-button>
                                 <lightning-button label="New Expense" onclick={openmodal}>
                                 </lightning-button>
                             </div>
@@ -237,6 +237,43 @@
                         <lightning-button label="Cancel" variant="neutral" onclick={closeModal}></lightning-button>
                         &nbsp;&nbsp;&nbsp;&nbsp;
                         <lightning-button label="Save" variant="brand" onclick={handleSaveExpenseCard}>
+                        </lightning-button>
+                    </footer>
+                </div>
+            </section>
+            <div class="slds-backdrop slds-backdrop_open"></div>
+        </div>
+    </template>
+
+    <!-- add Balanse -->
+    <template if:true={openmodelBalance}>
+        <div class="demo-only" style="height: 640px;">
+            <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
+                aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+                <div class="slds-modal__container">
+                    <header class="slds-modal__header">
+                        <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
+                            title="Close" onclick={closeModalBalance}>
+                            <lightning-icon icon-name="utility:close" size="medium">
+                            </lightning-icon>
+                            <span class="slds-assistive-text">Close</span>
+                        </button>
+                        <h2 id="modal-headin" class="slds-text-heading_medium slds-hyphenate">Add Balance</h2>
+                    </header>
+                    <div class="slds-modal__content slds-p-around_medium">
+                        <div class="slds-p-around_medium">
+                            <div style="width: 150px;">
+                                <lightning-input type="number" class="inputSumm" onchange={handleSetInputModalBalance}
+                                    name="summ"  label="Summ" placeholder="Summ..."></lightning-input>                               
+                            </div>
+                            
+
+                        </div>
+                    </div>
+                    <footer class="slds-modal__footer">
+                        <lightning-button label="Cancel" variant="neutral" onclick={closeModalBalance}></lightning-button>
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <lightning-button label="Add" variant="brand" onclick={handleAddBalance}>
                         </lightning-button>
                     </footer>
                 </div>
