--- a/force-app/main/default/lwc/employeePage/employeePage.html
+++ b/force-app/main/default/lwc/employeePage/employeePage.html
@@ -21,8 +21,8 @@
                             </div>
                             <div class="slds-col slds-no-flex">
                                 <lightning-button label="Income" onclick={openmodalBalance}></lightning-button>
-                                <lightning-button label="New Expense" onclick={openmodal}>
-                                </lightning-button>
+                                <lightning-button label="New Expense" onclick={openmodal}></lightning-button>
+                                <lightning-button label="Logout" onclick={logoutUser}></lightning-button>  
                             </div>
                         </header>
                     </div>
